--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Elizabeth Harmon</title>
   </head>
   <body>
+    <main id="main"><h1>Tribute Page</h1></main>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
