Closes #6: Element with a corresponding id=tribute-info
git commit -m Closes

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
           </figcaption>
         </figure>
       </div>
+      <article id="tribute-info">
+        <p>
+          Elizabeth "Beth" Harmon is a chess prodigy and the main character in
+          the Netflix miniseries, The Queen's Gambit.
+        </p>
+      </article>
     </main>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
