--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
           Elizabeth "Beth" Harmon is a chess prodigy and the main character in
           the Netflix miniseries, The Queen's Gambit.
         </p>
+        <a
+          id="tribute-link"
+          href="https://the-queens-gambit.fandom.com/wiki/Beth_Harmon#Biography"
+          target="_blank"
+        >
+          Know more about Beth Harmon
+        </a>
       </article>
     </main>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
