Moves end of timeline line at the last dot

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         width: 6px;
         background-color: #f9ffff;
         top: 0px;
-        bottom: 0;
+        bottom: 330px;
         left: 50%;
         margin-left: -3px;
         z-index: -1;
@@ -176,9 +176,11 @@
         /* Place the timelime to the left */
         #img-div::before {
           left: 39px;
+          bottom: 0px;
         }
         #tribute-timeline::after {
           left: 31px;
+          bottom: 250px;
         }
 
         /* Full-width containers */
